--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
 body{
     text-align: center;
-    background-color: aqua;
+   background-color: aqua;
     font-family: 'Oleo Script', Helvetica, sans-serif;
     font-size: 35px;
+}
+
+
+.container {
+    max-width: 550px;
+    height: 100vh;
+    text-align: center;
+
+
 }
