--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    text-align: center;
+    text-align: left;
    background-color: aqua;
     font-family: 'Oleo Script', Helvetica, sans-serif;
     font-size: 35px;
@@ -7,10 +7,19 @@ body{
 
 
 .container {
-    text-align: center;
+    text-align: left;
 
 }
 
+h2 {
+    text-align: left;
+}
+ p {
+     text-align: left;
+ }
+img {
+    text-align: right;
+}
   
  
 
