--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ footer {
         left: 0;
         bottom: 0;
         width: 100%;
-        background-color:purple;
+        background-color:lightpink;
         color: white;
         text-align: left;
      }
