--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-
+/* body styling */
 body{
     text-align: left;
-   background-color: aqua;
+   background-color:lightsalmon;
     font-family: 'Oleo Script', Helvetica, sans-serif;
     font-size: 35px;
 }
